--- a/CG_APP/CG_APP.vcxproj
+++ b/CG_APP/CG_APP.vcxproj
@@ -20,9 +20,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="my_super_3d_add_trash.cpp" />
+    <FxCompile Include="PongVS.hlsl">
+      <FileType>Document</FileType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)Shaders\%(Filename).cso</ObjectFileOutput>
+    </FxCompile>
     <ClCompile Include="Source\App.cpp" />
+    <ClCompile Include="Source\Ball.cpp" />
     <ClCompile Include="Source\Bindable.cpp" />
     <ClCompile Include="Source\Box.cpp" />
+    <ClCompile Include="Source\CollisionRectangle.cpp" />
     <ClCompile Include="Source\Drawable.cpp" />
     <ClCompile Include="Source\DrawableBase.cpp" />
     <ClCompile Include="Source\Graphics.cpp" />
@@ -31,6 +38,7 @@
     <ClCompile Include="Source\Keyboard.cpp" />
     <ClCompile Include="Source\MySuper3DApp.cpp" />
     <ClCompile Include="Source\PixelShader.cpp" />
+    <ClCompile Include="Source\Stick.cpp" />
     <ClCompile Include="Source\Timer.cpp" />
     <ClCompile Include="Source\Topology.cpp" />
     <ClCompile Include="Source\TransformCBuf.cpp" />
@@ -39,6 +47,10 @@
     <ClCompile Include="Source\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="PongPS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)Shaders\%(Filename).cso</ObjectFileOutput>
+    </FxCompile>
     <FxCompile Include="Shaders\ColorIndexPS.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
       <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(MSBuildProjectDirectory)\Shaders\%(Filename).cso</ObjectFileOutput>
@@ -53,9 +65,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\App.h" />
+    <ClInclude Include="Source\Ball.h" />
     <ClInclude Include="Source\Bindable.h" />
     <ClInclude Include="Source\BindableBase.h" />
     <ClInclude Include="Source\Box.h" />
+    <ClInclude Include="Source\Circle.h" />
+    <ClInclude Include="Source\CollisionRectangle.h" />
     <ClInclude Include="Source\ConstantBuffer.h" />
     <ClInclude Include="Source\Cube.h" />
     <ClInclude Include="Source\Drawable.h" />
@@ -66,6 +81,8 @@
     <ClInclude Include="Source\InputLayout.h" />
     <ClInclude Include="Source\Keyboard.h" />
     <ClInclude Include="Source\PixelShader.h" />
+    <ClInclude Include="Source\Rectangle.h" />
+    <ClInclude Include="Source\Stick.h" />
     <ClInclude Include="Source\Timer.h" />
     <ClInclude Include="Source\Topology.h" />
     <ClInclude Include="Source\TransformCBuf.h" />
@@ -73,6 +90,9 @@
     <ClInclude Include="Source\VertexShader.h" />
     <ClInclude Include="Source\WinDefs.h" />
     <ClInclude Include="Source\Window.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -191,5 +211,14 @@
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="..\packages\Microsoft.XAudio2.Redist.1.2.11\build\native\Microsoft.XAudio2.Redist.targets" Condition="Exists('..\packages\Microsoft.XAudio2.Redist.1.2.11\build\native\Microsoft.XAudio2.Redist.targets')" />
+    <Import Project="..\packages\directxtk_desktop_2019.2023.4.28.1\build\native\directxtk_desktop_2019.targets" Condition="Exists('..\packages\directxtk_desktop_2019.2023.4.28.1\build\native\directxtk_desktop_2019.targets')" />
   </ImportGroup>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Microsoft.XAudio2.Redist.1.2.11\build\native\Microsoft.XAudio2.Redist.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.XAudio2.Redist.1.2.11\build\native\Microsoft.XAudio2.Redist.targets'))" />
+    <Error Condition="!Exists('..\packages\directxtk_desktop_2019.2023.4.28.1\build\native\directxtk_desktop_2019.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\directxtk_desktop_2019.2023.4.28.1\build\native\directxtk_desktop_2019.targets'))" />
+  </Target>
 </Project>
