--- a/CG_APP/CG_APP.vcxproj
+++ b/CG_APP/CG_APP.vcxproj
@@ -23,14 +23,17 @@
     <ClCompile Include="Source\App.cpp" />
     <ClCompile Include="Source\Bindable.cpp" />
     <ClCompile Include="Source\Box.cpp" />
+    <ClCompile Include="Source\Camera.cpp" />
     <ClCompile Include="Source\Drawable.cpp" />
     <ClCompile Include="Source\DrawableBase.cpp" />
     <ClCompile Include="Source\Graphics.cpp" />
     <ClCompile Include="Source\IndexBuffer.cpp" />
     <ClCompile Include="Source\InputLayout.cpp" />
     <ClCompile Include="Source\Keyboard.cpp" />
+    <ClCompile Include="Source\Mouse.cpp" />
     <ClCompile Include="Source\MySuper3DApp.cpp" />
     <ClCompile Include="Source\PixelShader.cpp" />
+    <ClCompile Include="Source\Sphere.cpp" />
     <ClCompile Include="Source\Timer.cpp" />
     <ClCompile Include="Source\Topology.cpp" />
     <ClCompile Include="Source\TransformCBuf.cpp" />
@@ -56,6 +59,7 @@
     <ClInclude Include="Source\Bindable.h" />
     <ClInclude Include="Source\BindableBase.h" />
     <ClInclude Include="Source\Box.h" />
+    <ClInclude Include="Source\Camera.h" />
     <ClInclude Include="Source\ConstantBuffer.h" />
     <ClInclude Include="Source\Cube.h" />
     <ClInclude Include="Source\Drawable.h" />
@@ -65,7 +69,10 @@
     <ClInclude Include="Source\IndexedTriangleList.h" />
     <ClInclude Include="Source\InputLayout.h" />
     <ClInclude Include="Source\Keyboard.h" />
+    <ClInclude Include="Source\Mouse.h" />
     <ClInclude Include="Source\PixelShader.h" />
+    <ClInclude Include="Source\Sphere.h" />
+    <ClInclude Include="Source\SphereGeomerty.h" />
     <ClInclude Include="Source\Timer.h" />
     <ClInclude Include="Source\Topology.h" />
     <ClInclude Include="Source\TransformCBuf.h" />
